--- a/src/style/sass/body/_body.scss
+++ b/src/style/sass/body/_body.scss
@@ -10,6 +10,9 @@
   flex-direction: column;
   max-width: 800px;
   margin: auto;
+  @media (min-width: $lg) {
+    max-width: 1000px;
+  }
   .content-container {
     z-index: 1;
   }
